Fix padding and alignment on main screen
- flex-grow means all the bits are centered even on phones
- fix padding of y/n/? items and adjust font on the smallest screens so they don't wrap
- fix up some spillage over the right side

--- a/static/styles.css
+++ b/static/styles.css
@@ -72,11 +72,11 @@ body {
   display: flex;           display: -webkit-flex;
   flex-direction: row;     -webkit-flex-direction: row;
   flex-grow: 0;            -webkit-flex-grow: 0;
-  width: 100%;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding-left: 5px;
+  padding-right: 4px;
+  padding-top: 10px;
+  padding-botton: 10px;
   border: 1px solid green;
-  padding: 10px;
   margin: 4px;
 }
 
@@ -93,7 +93,7 @@ body {
 .wrapper {
   display: flex;           display: -webkit-flex;
   flex-direction: row;     -webkit-flex-direction: row;
-  flex-grow: 0;            -webkit-flex-grow: 0;
+  flex-grow: 1;            -webkit-flex-grow: 1;
   flex-wrap: wrap;         -webkit-flex-wrap: wrap;
 }
 
@@ -122,10 +122,21 @@ body {
     font-weight: bold;
 }
 .event-table .cell-stats {
-  width: 80px;
   white-space: nowrap;
   margin-left: 10px;
+  margin-right: 10px;
 }
+
+/* keep from wrapping on smallest phones */
+@media screen and (max-width: 330px) {
+    .event-table .cell-stats {
+      margin-left: 5px;
+      margin-right: 5px;
+      font-size: 80%;
+    }
+}
+
+
 
 .event-table .cell-user-status {
     text-align: center;
@@ -316,7 +327,7 @@ body {
 }
 #tabs .ui-tabs-panel {
     /* background: #e3e3e3; */
-    padding: 0.75em 1em;
+    padding: 0.75em .2em;
     background: #ffe5ff;
 }
 #tabs .ui-tabs-nav {
